--- a/11.html
+++ b/11.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -48,6 +48,7 @@
     <a id="close" href="javascript:">关闭</a><br /><br />
     <input type="input" /><br />
     <input type="button" value="提交" />
+	在这里添加一点内容，作为更新用的
 </div>
 </body>
 </html>
